--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3880,3 +3880,35 @@ table {
 .condition-item > p {
     margin-bottom: 8px;
 }
+
+.bonus-modal { 
+    backdrop-filter: blur(5px);
+}
+
+body.modal-open {
+  overflow-y: hidden !important;
+  padding-right: 0 !important;
+}
+
+
+.bonus-img img{
+  height: 150px;
+}
+
+button.bonus-modal-close {
+    position: absolute;
+    z-index: 9;
+    border: none;
+    background: transparent;
+    top: 12px;
+    right: 12px;
+    font-size: 22px;
+    border: 1px solid #000;
+    border-radius: 3px;
+    width: 36px;
+    height: 36px;
+}
+
+.bonus-img {
+    box-shadow: 0 2px 10px #cfcd8b;
+}
