--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -321,11 +321,13 @@
     font-size: 23px;
     line-height: 32px;
   }
+  .alert-note ul{
+    width: 100%;
+  }
   .alert-note a {
     display: block;
-    text-align: right;
     width: 100%;
-    font-size: 11px;
+    font-size: 12px;
   }
   .bonus-chance-box h2 {
     font-size: 30px;
