--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3989,3 +3989,25 @@ button.bonus-modal-close {
     background-position: 0 0;
   }
 }
+
+
+.promotions-bonus-area{
+  background: linear-gradient(97.46deg, rgba(245, 196, 72, 0.18) 0%, rgba(255, 255, 255, 0.5) 49.48%, rgba(245, 196, 72, 0.18) 100%);
+  padding:20px;
+  border-radius:15px;
+
+}
+.promotions-bonus-content p{
+  color:#191D2A;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  opacity: 0.7;
+}
+.promotions-bonus-content h5 {
+    color: #191D2A;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 22px;
+    margin-bottom: 6px;
+}
