--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -447,6 +447,7 @@
   .accordion-button::after {
     height: 40px;
     width: 40px;
+    margin-left: 15px;
   }
   .more-details-accordion button {
     font-size: 20px;
